--- a/css/offcanvas.css
+++ b/css/offcanvas.css
@@ -27,13 +27,11 @@ body {
     left: 0;
   }
 
-  .row-offcanvas-right
-  .sidebar-offcanvas {
+  .row-offcanvas-right .sidebar-offcanvas {
     right: -50%; /* 6 columns */
   }
 
-  .row-offcanvas-left
-  .sidebar-offcanvas {
+  .row-offcanvas-left .sidebar-offcanvas {
     left: -50%; /* 6 columns */
   }
 
@@ -47,7 +45,7 @@ body {
 
   .sidebar-offcanvas {
     position: absolute;
-    top: 0;
+    top: -12px;
     width: 50%; /* 6 columns */
   }
 }
