bessere Banner Position

--- a/css/theme.css
+++ b/css/theme.css
@@ -104,6 +104,10 @@ body {
     }
 }
 
+.csc-textpic-image img {
+    border: 0;
+}
+
 .news-latest-item > h3 {
     font-size: 14px;
     margin-top: 0;
